--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "riscv-decode"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["Jonathan Behrens <fintelia@gmail.com>"]
 edition = "2018"
 description = "A simple library for decoding RISC-V instructions"
 repository = "https://github.com/fintelia/riscv-decode"
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 categories = ["no-std", "embedded", "encoding", "parsing"]
 keywords = ["riscv"]
 
